@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-29T01:51:35Z",
+  "timestamp" : "2022-10-29T08:26:20Z",
   "count_outdated" : 198,
   "uniques_outdated" : 64,
-  "count" : 229,
+  "count" : 228,
   "uniques" : 80,
   "clones" : [
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
