@@ -1,3 +1,11 @@
+2022-10-29T08:26:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3350723686 # 179
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 64 198 / 80 229
+* notice: next accum: outdated-unq outdated-all / unq all: 64 198 / 80 228
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-15]
+
 2022-10-29T01:51:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349626285 # 178
 * notice: last 14d: unq all: 3 31
